2015-12-16         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (two_way_open): Remove unneeded close of slave in the
	parent.

2015-12-16         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_number): Move count into ifdef for MPFR. Avoids
	an unused variable warning if not compiling for MPFR.

	Unrelated:

	* io.c (two_way_open): If using a pty instead of pipes, open the
	slave in the child. Fixes AIX and doesn't seem to break GNU/Linux.

2015-11-26         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y (cmdtab): Add "exit" as synonym for "quit".
	Suggested by Joep van Delft <joepvandelft@xs4all.nl>.
	* NEWS: Document this.

2015-11-24         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (debug_pre_execute): Fix to check watchpoints before
	checking breakpoints. Gives more natural behavior for the user.
	* NEWS: Document this.
	Issue reported by Joep van Delft <joepvandelft@xs4all.nl>.

2015-10-28         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (nextc): Don't allow '\0' even if check_for_bad
	is false. Fixes a problem reported by Hanno Boeck <hanno@hboeck.de>.

	Unrelated:
	
	* dfa.c: Sync with GNU grep.

2015-10-16         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (SUBDIRS): Fix ordering so that
	make check directly after configure works properly.
	Thanks to Michal Jaegermann <michal.jnn@gmail.com>
	for the report.

	Unrelated:

	* dfa.c: Sync with GNU grep.

2015-10-11         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yylex): Fix invalid read problems.
	Reported by Hanno Boeck <hanno@hboeck.de>.

2015-10-04         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Bump version to 4.1.3a.

2015-09-26         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yylex): Diagnose multidimensional arrays for
	traditional/posix (fatal) or lint. Thanks to Ed Morton
	for the bug report.

2015-09-25         Arnold D. Robbins     <arnold@skeeve.com>
