@@ -750,6 +750,8 @@ EXTRA_DIST = \
 	profile6.ok \
 	profile7.awk \
 	profile7.ok \
+	profile8.awk \
+	profile8.ok \
 	prt1eval.awk \
 	prt1eval.ok \
 	prtoeval.awk \
@@ -1083,7 +1085,8 @@ GAWK_EXT_TESTS = \
 	muldimposix \
 	nastyparm negtime next nondec nondec2 \
 	patsplit posix printfbad1 printfbad2 printfbad3 printfbad4 printhuge procinfs \
-	profile0 profile1 profile2 profile3 profile4 profile5 profile6 profile7 pty1 \
+	profile0 profile1 profile2 profile3 profile4 profile5 profile6 \
+	profile7 profile8 pty1 \
 	rebuf regnul1 regnul2 regx8bit reginttrad reint reint2 rsgetline rsglstdin rsstart1 \
 	rsstart2 rsstart3 rstest6 shadow sortfor sortu split_after_fpat \
 	splitarg4 strftime \
@@ -1798,6 +1801,12 @@ profile6:
 profile7:
 	@echo $@
 	@$(AWK) --profile=ap-$@.out -f "$(srcdir)"/$@.awk > /dev/null
+	@sed 1,2d < ap-$@.out > _$@; rm ap-$@.out
+	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
+
+profile8:
+	@echo $@
+	@$(AWK) --pretty=ap-$@.out -f "$(srcdir)"/$@.awk < /dev/null
 	@sed 1,2d < ap-$@.out > _$@; rm ap-$@.out
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
 
