@@ -1,0 +1,4 @@
+{if(0){}else{}}
+{while(0){}}
+{do{}while(0)}
+{for(;;){}}
