@@ -1,0 +1,23 @@
+	# Rule(s)
+
+	{
+		if (0) {
+		} else {
+		}
+	}
+
+	{
+		while (0) {
+		}
+	}
+
+	{
+		do {
+		} while (0)
+	}
+
+	{
+		for (;;) {
+		}
+	}
+
