@@ -1,3 +1,8 @@
+2015-12-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (profile8): New test.
+	* profile8.awk, profile8.ok: New files.
+
 2015-11-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (watchpoint1): New test.
