@@ -1,3 +1,9 @@
+2015-12-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (mk_condition): Revise to correctly handle
+	empty else part for pretty printing. Bug report by
+	ziyunfei <446240525@qq.com>.
+
 2015-12-16         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* io.c (two_way_open): Remove unneeded close of slave in the
